--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rxbs",
+  "name": "bs-rx",
   "version": "0.1.0",
   "files": ["src/RxBs.re", "bsconfig.json"],
   "scripts": {
@@ -11,6 +11,10 @@
   "keywords": ["BuckleScript"],
   "author": "Wolfgang Goedel",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wolfgangGoedel/bs-rx.git"
+  },
   "devDependencies": {
     "@glennsl/bs-jest": "^0.4.2",
     "bs-platform": "^3.1.5",
